--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
 	<version>0.0.6-SNAPSHOT</version>
 
 	<name>cnakes</name>
-	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
+	<url>https://github.com/Herbis/cnakes</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -217,7 +216,10 @@
 			<artifactId>lwjgl-stb</artifactId>
 			<classifier>${lwjgl.natives}</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.26</version>
+		</dependency>
 	</dependencies>
-
-
 </project>
