--- a/resources/defaultConfiguration.yaml
+++ b/resources/defaultConfiguration.yaml
@@ -1,7 +1,7 @@
 video:
-  monitor: 1
+  monitor: 0
   resolution:
     horizontal: 1280
     vertical: 720
-    fullScreen: true
+    fullScreen: false
   scale: 10
