--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,9 @@
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>${project.groupId}.${project.artifactId}.${class}</mainClass>
+									<manifestEntries>
+										<Multi-Release>true</Multi-Release>
+									</manifestEntries>
                                 </transformer>
                             </transformers>
                             <finalName>${project.artifactId}-${project.version}</finalName>
