--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,9 @@
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>${maven-shade-plugin.version}</version>
+				<configuration>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
+				</configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
