--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: java
+sudo: false
+install: true
 jdk:
   - openjdk8
   - openjdk11
-script: mvn package
+addons:
+  sonarcloud:
+    organization: "herbis"
+script:
+  - mvn clean verify sonar:sonar -Pcoverage -Dsonar.projectKey=herbis_cnakes
+  - mvn package
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
