--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
 		<lwjgl.version>3.2.3</lwjgl.version>
 		<class>menus.StartScreen</class>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -145,6 +143,9 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<release>11</release>
+				</configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
