--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>lv.herbis</groupId>
 	<artifactId>cnakes</artifactId>
-	<version>0.3.1</version>
+	<version>0.4.0</version>
 
 	<name>cnakes</name>
 	<url>https://github.com/Herbis/cnakes</url>
@@ -17,6 +17,7 @@
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
 		<log4j.version>2.13.3</log4j.version>
+		<joml.version>1.9.25</joml.version>
 	</properties>
 
 	<profiles>
@@ -262,6 +263,11 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.joml</groupId>
+			<artifactId>joml</artifactId>
+			<version>${joml.version}</version>
 		</dependency>
 	</dependencies>
 </project>
