--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
 						<configuration>
 							<headerType>gui</headerType>
 							<outfile>target/cnakes.exe</outfile>
-							<jar>target/${artifactId}-${version}.jar</jar> <!-- 'shaded' is the value set on shadedClassifierName above -->
+							<jar>target/${artifactId}-${version}.jar</jar>
 							<errTitle>Cnakes Error</errTitle>
 							<classPath>
 								<mainClass>lv.herbis.cnakes.menus.StartScreen</mainClass>
